to load and store preferences, as well as specify an alternate
preferences file, via new command line options.
[] Implement "Advanced" option for Find
[1751451] Add extra warning when deleting entire group, including the 
number of entries that will be deleted.  Unlike warning for single entries,
the user cannot turn this warning off.

Changes to Existing Features in 3.09
====================================
[1732163] Date/time displayed throughout in the users "Short Date" format.

Bugs fixed in 3.08
==================
[1709992, 1692662, 1678711, 1651392, 1626671, 1604806] Non-English
text in databases fully supported.
[1691048] Import text file with blank lines or missing fields will no
longer crash application.
[1688994] Although rename is not possible in read-only mode, this change
prevents F2 giving the user the feel that they can.
[1693395] Now Minimize takes precedence over "Always on Top" during Autotype
[1695991] File type Compare now has .bak & .ibak suffixes
[Open Discussion] Fix issue if PWS is maximized/minimized/then restored
[1701508] Entry times no longer written out if not set
[1702623] Compare now shows correct filenames
[] Fix problem with remembering Tree state on restore after minimize
[1678527] Line delimiter now works during import of plain text
[1708099] Default saved username, now shows in new entry
[1709418] Cancel after Lock Safe from system tray now does Right Thing
[] More stringent checking during tree "edit in-place" to prevent DB corruption
[1721031] Notes field with lots of text now stays in position when focus lost
[Open Discussion] Allow Notes field to be Imported from text file even if
it is not enclosed in double quotes
[1721009] Can now Import into a new database after closing previous database
[1723936] Expiry date format is now in the user's Short Date format

New Features for 3.08
=====================
[1695446] It's possible to specify command line parameters for